--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.12",
+    "aws-sdk": "^2.1691.0",
     "latest-version": "^9.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "titan-vault-encryption": "file:"
   },
   "devDependencies": {
