--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 AWS_REGION=us-east-1
 COGNITO_CLIENT_ID=388csd4c9tak6vlgtr7rgq8euq
 COGNITO_USER_POOL_ID=us-east-1_aUI9cggHC
+
+# need to put aws credentials in here
