--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.7.3",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "wrangler": "^3.107.3"
   }
 }
